--- a/src/main/resources/templates/budget.html
+++ b/src/main/resources/templates/budget.html
@@ -6,13 +6,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/budget.css">
+    <script type="module"  src="/js/budget.js" defer></script>
+
 </head>
 <body>
 <main layout:fragment="main">
     <div class="d:flex jc:space-between mt:8">
         <h1 class="page-title">4월 예산</h1>
-        <div class="btn btn-size:1 bg-color:main-2 fs:7">예산추가</div>
+        <div class="addBtn btn btn-size:1 bg-color:main-2 fs:7">예산추가</div>
     </div>
+    <section class="add card d:none">
+        <h1 class="title">예산 추가</h1>
+        <form action="/budget?m=add" method="post" class="form form:underline grid">
+            <label>
+                <span>이름</span>
+                <input type="text" name="name">
+            </label>
+            <label>
+                <span>설명</span>
+                <input type="text" name="des">
+            </label>
+            <label>
+                <span>금액</span>
+                <input type="text" name="amt">
+            </label>
+            <div class="d:flex gap:8">
+                <label class="fl-grow:1">
+                    <span>일자</span>
+                    <span class="d:flex fl-grow:1 ai:center">
+                    <span class="mr:2 desc fw:2">매달</span>
+                    <select name="dd">
+                        <option value="1">1일</option>
+                        <option value="2">2일</option>
+                        <option value="3">3일</option>
+                        <option value="4">4일</option>
+                        <option value="5">5일</option>
+                        <option value="6">6일</option>
+                        <option value="7">7일</option>
+                        <option value="8">8일</option>
+                        <option value="9">9일</option>
+                        <option value="10">10일</option>
+                        <option value="11">11일</option>
+                        <option value="12">12일</option>
+                        <option value="13">13일</option>
+                        <option value="14">14일</option>
+                        <option value="15">15일</option>
+                        <option value="16">16일</option>
+                        <option value="17">17일</option>
+                        <option value="18">18일</option>
+                        <option value="19">19일</option>
+                        <option value="20">20일</option>
+                        <option value="21">21일</option>
+                        <option value="22">22일</option>
+                        <option value="23">23일</option>
+                        <option value="24">24일</option>
+                        <option value="25">25일</option>
+                        <option value="26">26일</option>
+                        <option value="27">27일</option>
+                        <option value="28">28일</option>
+                        <option value="29">29일</option>
+                        <option value="30">30일</option>
+                        <option value="31">31일</option>
+                    </select>
+                </span>
+                </label>
+                <label class="fl-grow:1">
+                    <span>카테고리</span>
+                    <select name="ctgId">
+                    </select>
+                </label>
+            </div>
+            <div class="d:flex gap:4 mt:4">
+                <span class="cnclBtn btn btn:outline fl-grow:1">취소</span>
+                <button class="btn fl-grow:1">저장</button>
+            </div>
+        </form>
+    </section>
 
     <section class="grid">
        <h1 class="d:none">예산 현황</h1>
@@ -27,6 +96,7 @@
         <div class="card p:4 fl-dir:row ai:center w:10p">
             <div class="fl-grow:1 d:flex fl-dir:column gap:4">
                 <div class="title fw:2">월급</div>
+                <div class="desc fs:5">사라시스템 급여</div>
                 <div class="desc fs:5">매달 10일</div>
             </div>
             <div class="title fw:2">250,000원</div>
@@ -34,7 +104,7 @@
     </section>
 
     <section class="card">
-        <h1 class="title">예산 추가</h1>
+        <h1 class="title">예산 수정</h1>
         <form action="/budget" method="post" class="form form:underline grid">
             <label>
                 <span>이름</span>
