--- a/src/main/resources/templates/budget.html
+++ b/src/main/resources/templates/budget.html
@@ -13,7 +13,7 @@
 <main layout:fragment="main">
     <div class="d:flex jc:space-between mt:8">
         <h1 class="page-title">4월 예산</h1>
-        <div class="addBtn btn btn-size:1 bg-color:main-2 fs:7">예산추가</div>
+        <div class="addBtn btn btn-size:1 btn-color:main-2 fs:7">예산추가</div>
     </div>
     <section class="add card d:none">
         <h1 class="title">예산 추가</h1>
@@ -28,7 +28,10 @@
             </label>
             <label>
                 <span>금액</span>
-                <input type="text" name="amt">
+                <span class="d:flex ai:end gap:1">
+                    <input type="text" name="amt">
+                    <span class="desc">원</span>
+                </span>
             </label>
             <div class="d:flex gap:8">
                 <label class="fl-grow:1">
@@ -73,6 +76,7 @@
                 <label class="fl-grow:1">
                     <span>카테고리</span>
                     <select name="ctgId">
+                        <option th:each="c:${categoryList}" th:text="${c['NAME']}" th:value="${c['ID']}">급여</option>
                     </select>
                 </label>
             </div>
@@ -87,85 +91,101 @@
        <h1 class="d:none">예산 현황</h1>
         <div class="card">
             <div class="title">총 예산</div>
-            <div class="value">2,300,000원</div>
+            <div class="value" th:text="${#numbers.formatDecimal(total, 0, 'COMMA', 0, 'POINT') + '원'}">2,300,000원</div>
         </div>
     </section>
 
     <section class="d:flex fl-dir:column gap:2">
         <h1 class="d:none">예산 내역</h1>
-        <div class="card p:4 fl-dir:row ai:center w:10p">
-            <div class="fl-grow:1 d:flex fl-dir:column gap:4">
-                <div class="title fw:2">월급</div>
-                <div class="desc fs:5">사라시스템 급여</div>
-                <div class="desc fs:5">매달 10일</div>
+        <div th:each="i:${list}" class="modDiv">
+            <div class="list card p:4 fl-dir:row ai:center w:10p pos:relative">
+                <div class="fl-grow:1 d:flex fl-dir:column gap:4 ml:1">
+                    <div><span class="tag" th:text="${i['CTG']}">근로소득</span></div>
+                    <div class="title fw:2 fl-grow:1" th:text="${i['NAME']}">월급</div>
+<!--                    <div class="desc fs:5" th:text="${i['DES']}">사라시스템 급여</div>-->
+                    <div class="desc fs:5" th:text="${'매달 '+ i['DD']} + '일'">매달 10일</div>
+                </div>
+                <div class="title fw:2 " th:text="${#numbers.formatDecimal(i['AMT'], 0, 'COMMA', 0, 'POINT')} + '원'"></div>
+                <div></div>
+                <div class="delBtn icon icon:x icon-size:1 as:self-start cursor:pointer pos:absolute top:1 right:1" th:data-id="${i['ID']}">삭제</div>
             </div>
-            <div class="title fw:2">250,000원</div>
+            <section class="mod card d:none">
+                <h1 class="title">예산 수정</h1>
+                <form action="/budget?m=mod" method="post" class="form form:underline grid">
+                    <label>
+                        <span>이름</span>
+                        <input type="text" name="name" th:value="${i['NAME']}">
+                    </label>
+                    <label>
+                        <span>설명</span>
+                        <input type="text" name="des" th:value="${i['DES']}">
+                    </label>
+                    <label>
+                        <span>금액</span>
+                        <span class="d:flex ai:end gap:1">
+                              <input type="text" name="amt" th:value="${#numbers.formatDecimal(i['AMT'], 0, 'COMMA', 0, 'POINT')}" th:data-amt="${#numbers.formatDecimal(i['AMT'], 0, 'COMMA', 0, 'POINT')}">
+                            <span class="desc">원</span>
+                        </span>
+                    </label>
+                    <label class="d:none"> id <input type="hidden" name="id" th:value="${i[ID]}"></label>
+                    <div class="d:flex gap:8">
+                        <label class="fl-grow:1">
+                            <span>일자</span>
+                            <span class="d:flex fl-grow:1 ai:center">
+                            <span class="mr:2 desc fw:2">매달</span>
+                            <select name="dd">
+                                <option value="1" th:selected="${i['DD'] eq 1}" >1일</option>
+                                <option value="2" th:selected="${i['DD'] eq 2}">2일</option>
+                                <option value="3" th:selected="${i['DD'] eq 3}">3일</option>
+                                <option value="4" th:selected="${i['DD'] eq 4}">4일</option>
+                                <option value="5" th:selected="${i['DD'] eq 5}">5일</option>
+                                <option value="6" th:selected="${i['DD'] eq 6}">6일</option>
+                                <option value="7" th:selected="${i['DD'] eq 7}">7일</option>
+                                <option value="8" th:selected="${i['DD'] eq 8}">8일</option>
+                                <option value="9" th:selected="${i['DD'] eq 9}">9일</option>
+                                <option value="10" th:selected="${i['DD'] eq 10}">10일</option>
+                                <option value="11" th:selected="${i['DD'] eq 11}">11일</option>
+                                <option value="12" th:selected="${i['DD'] eq 12}">12일</option>
+                                <option value="13" th:selected="${i['DD'] eq 13}">13일</option>
+                                <option value="14" th:selected="${i['DD'] eq 14}">14일</option>
+                                <option value="15" th:selected="${i['DD'] eq 15}">15일</option>
+                                <option value="16" th:selected="${i['DD'] eq 16}">16일</option>
+                                <option value="17" th:selected="${i['DD'] eq 17}">17일</option>
+                                <option value="18" th:selected="${i['DD'] eq 18}">18일</option>
+                                <option value="19" th:selected="${i['DD'] eq 19}">19일</option>
+                                <option value="20" th:selected="${i['DD'] eq 20}">20일</option>
+                                <option value="21" th:selected="${i['DD'] eq 21}">21일</option>
+                                <option value="22" th:selected="${i['DD'] eq 22}">22일</option>
+                                <option value="23" th:selected="${i['DD'] eq 23}">23일</option>
+                                <option value="24" th:selected="${i['DD'] eq 24}">24일</option>
+                                <option value="25" th:selected="${i['DD'] eq 25}">25일</option>
+                                <option value="26" th:selected="${i['DD'] eq 26}">26일</option>
+                                <option value="27" th:selected="${i['DD'] eq 27}">27일</option>
+                                <option value="28" th:selected="${i['DD'] eq 28}">28일</option>
+                                <option value="29" th:selected="${i['DD'] eq 29}">29일</option>
+                                <option value="30" th:selected="${i['DD'] eq 30}">30일</option>
+                                <option value="31" th:selected="${i['DD'] eq 31}">31일</option>
+                            </select>
+                        </span>
+                        </label>
+                        <label class="fl-grow:1">
+                            <span>카테고리</span>
+                            <select name="ctgId">
+                                <option th:each="c:${categoryList}" th:text="${c['NAME']}" th:value="${c['ID']}">급여</option>
+                            </select>
+                        </label>
+                    </div>
+                    <div></div>
+                    <div class="d:flex gap:4 mt:4">
+                        <span class="cnclBtn btn btn:outline fl-grow:1">취소</span>
+                        <button class="btn fl-grow:1">저장</button>
+                    </div>
+                </form>
+            </section>
         </div>
     </section>
 
-    <section class="card">
-        <h1 class="title">예산 수정</h1>
-        <form action="/budget" method="post" class="form form:underline grid">
-            <label>
-                <span>이름</span>
-                <input type="text" name="name">
-            </label>
-            <label>
-                <span>설명</span>
-                <input type="text" name="des">
-            </label>
-            <label>
-                <span>금액</span>
-                <input type="text" name="amt">
-            </label>
-            <div class="d:flex gap:8">
-                <label class="fl-grow:1">
-                    <span>일자</span>
-                    <span class="d:flex fl-grow:1 ai:center">
-                    <span class="mr:2 desc fw:2">매달</span>
-                    <select name="dd">
-                        <option value="1">1일</option>
-                        <option value="2">2일</option>
-                        <option value="3">3일</option>
-                        <option value="4">4일</option>
-                        <option value="5">5일</option>
-                        <option value="6">6일</option>
-                        <option value="7">7일</option>
-                        <option value="8">8일</option>
-                        <option value="9">9일</option>
-                        <option value="10">10일</option>
-                        <option value="11">11일</option>
-                        <option value="12">12일</option>
-                        <option value="13">13일</option>
-                        <option value="14">14일</option>
-                        <option value="15">15일</option>
-                        <option value="16">16일</option>
-                        <option value="17">17일</option>
-                        <option value="18">18일</option>
-                        <option value="19">19일</option>
-                        <option value="20">20일</option>
-                        <option value="21">21일</option>
-                        <option value="22">22일</option>
-                        <option value="23">23일</option>
-                        <option value="24">24일</option>
-                        <option value="25">25일</option>
-                        <option value="26">26일</option>
-                        <option value="27">27일</option>
-                        <option value="28">28일</option>
-                        <option value="29">29일</option>
-                        <option value="30">30일</option>
-                        <option value="31">31일</option>
-                    </select>
-                </span>
-                </label>
-                <label class="fl-grow:1">
-                    <span>카테고리</span>
-                    <select name="ctgId">
-                    </select>
-                </label>
-            </div>
-        </form>
-    </section>
+
 
 
 </main>
