Feat: 카드 CRUD 작업완료

--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -12,7 +12,7 @@
 <main layout:fragment="main">
     <div class="d:flex jc:space-between mt:8">
         <h1 class="page-title">카테고리</h1>
-        <div class="addBtn btn btn-size:1 bg-color:main-2 fs:7">카테고리 추가</div>
+        <div class="addBtn btn btn-size:1 btn-color:main-2 fs:7">카테고리 추가</div>
     </div>
 
     <section class="add card d:none">
