--- a/src/main/resources/templates/expense.html
+++ b/src/main/resources/templates/expense.html
@@ -52,7 +52,7 @@
                     <div class="fs:4">월</div>
                 </div>
                 <div class="fl-grow:1 d:flex fl-dir:column gap:4">
-                    <div class=""><span class="p:1 pl:2 pr:2 bg-color:main-1 bd-radius:3 fs:3 color:base-7">데이트</span></div>
+                    <div><span class="p:1 pl:2 pr:2 bg-color:main-1 bd-radius:3 fs:3 color:base-7">데이트</span></div>
                     <div class="title fw:2">명륜진사갈비</div>
                     <div class="desc fs:5">현대 코웨이</div>
                 </div>
