Feat: 공통 css 수정
- layout.css 에러메세지 클래스 추가
- form.css input 높이 수정

--- a/src/main/resources/static/css/inc/layout.css
+++ b/src/main/resources/static/css/inc/layout.css
@@ -78,3 +78,8 @@ header > div {
 .form.form\:underline {
     gap:16px;
 }
+
+.error-message {
+    color: var(--color-accent-1);
+    text-align: center;
+}
