Refactor: 불필요한 타임리프 dataset 삭제

--- a/src/main/resources/templates/budget.html
+++ b/src/main/resources/templates/budget.html
@@ -126,7 +126,7 @@
                     <label>
                         <span>금액</span>
                         <span class="d:flex ai:end gap:1">
-                              <input type="text" name="amt" th:value="${#numbers.formatDecimal(i['AMT'], 0, 'COMMA', 0, 'POINT')}" th:data-amt="${#numbers.formatDecimal(i['AMT'], 0, 'COMMA', 0, 'POINT')}">
+                              <input type="text" name="amt" th:value="${#numbers.formatDecimal(i['AMT'], 0, 'COMMA', 0, 'POINT')}">
                             <span class="desc">원</span>
                         </span>
                     </label>
