--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -20,8 +20,14 @@
             <div th:if="${param.logout}" class="success-message">
                 로그아웃 되었습니다.
             </div>
+            <div th:if="${param.expired}" class="error-message">
+                세션이 만료되었습니다. 다시 로그인해주세요.
+            </div>
+            <div th:if="${param.invalid}" class="error-message">
+                유효하지 않은 세션입니다. 다시 로그인해주세요.
+            </div>
             
-            <form action="/signin" method="post" class="form mt:8 form:underline d:flex fl-dir:column gap:10 w:9">
+            <form action="/signin" method="post" class="form mt:8 form:underline d:flex fl-dir:column gap:10 ml:4 mr:4 md:mr:0 md:ml:0">
                 <label>
                     <span>아이디</span>
                     <input type="text" name="userNm" placeholder="아이디를 입력하세요" required>
@@ -30,12 +36,17 @@
                     <span>비밀번호</span>
                     <input type="password" name="pwd" placeholder="비밀번호를 입력하세요" required>
                 </label>
+                
+                <div class="remember-me-container d:flex ai:center gap:2 mt:2">
+                    <input type="checkbox" id="remember-me" name="remember-me" class="mr:1">
+                    <label for="remember-me" style="font-size: 0.9rem;">자동 로그인</label>
+                </div>
 
-                    <ul class="link">
-                        <li><a href="">아이디 찾기</a></li>
-                        <li><a href="">비밀번호 찾기</a></li>
-                        <li><a href="/signup">회원가입</a></li>
-                    </ul>
+                <ul class="link">
+                    <li><a href="">아이디 찾기</a></li>
+                    <li><a href="">비밀번호 찾기</a></li>
+                    <li><a href="/signup">회원가입</a></li>
+                </ul>
                 <div><button type="submit" class="btn btn-color:main-2 w:10p h:1">로그인</button></div>
             </form>
         </section>
